Support multiple completion interfaces
