# pkg/stream_controller/request.go
@@ -2,13 +2,15 @@ package stream_controller
 
 import (
 	"code-completion/pkg/completions"
+	"code-completion/pkg/model"
 	"context"
+	"strings"
 )
 
 // 客户端请求包装器
 type ClientRequest struct {
-	Input    *completions.CompletionInput         // 客户端发出的补全请求参数
-	Perf     completions.CompletionPerformance    // 性能统计
+	Para     *model.CompletionParameter           // 补全请求参数
+	Perf     *completions.CompletionPerformance   // 性能统计
 	Canceled bool                                 // 请求是否被取消
 	ctx      context.Context                      // 请求关联的协程上下文
 	cancel   context.CancelFunc                   // 可以取消执行请求的协程
@@ -16,20 +18,29 @@ type ClientRequest struct {
 }
 
 func (r *ClientRequest) GetDetails() map[string]interface{} {
+	var linePrefix, lineSuffix string
+	lines := strings.Split(r.Para.Prefix, "\n")
+	if len(lines) > 0 {
+		linePrefix = lines[len(lines)-1]
+	}
+	lines = strings.Split(r.Para.Suffix, "\n")
+	if len(lines) > 0 {
+		lineSuffix = lines[0]
+		if len(lines) > 1 {
+			lineSuffix += "\n"
+		}
+	}
 	return map[string]interface{}{
-		"completion_id": r.Input.CompletionID,
-		"client_id":     r.Input.ClientID,
-		"model": map[string]interface{}{
-			"origin":   r.Input.Model,
-			"selected": r.Input.SelectedModel,
-		},
-		"prompt": len(r.Input.Prompt),
-		"processed": map[string]interface{}{
-			"prefix":      len(r.Input.Processed.Prefix),
-			"suffix":      len(r.Input.Processed.Suffix),
-			"context":     len(r.Input.Processed.CodeContext),
-			"line_prefix": r.Input.Processed.CursorLinePrefix,
-			"line_suffix": r.Input.Processed.CursorLineSuffix,
+		"completion_id": r.Para.CompletionID,
+		"client_id":     r.Para.ClientID,
+		"model":         r.Para.Model,
+		"prompt": map[string]interface{}{
+			"prefix":      len(r.Para.Prefix),
+			"suffix":      len(r.Para.Suffix),
+			"context":     len(r.Para.CodeContext),
+			"total":       len(r.Para.Prefix) + len(r.Para.Suffix) + len(r.Para.CodeContext),
+			"line_prefix": linePrefix,
+			"line_suffix": lineSuffix,
 		},
 		"performance": r.Perf,
 		"canceled":    r.Canceled,
@@ -38,9 +49,9 @@ func (r *ClientRequest) GetDetails() map[string]interface{} {
 
 func (r *ClientRequest) GetSummary() map[string]interface{} {
 	return map[string]interface{}{
-		"completion_id": r.Input.CompletionID,
-		"client_id":     r.Input.ClientID,
-		"prompt":        len(r.Input.Processed.Prefix) + len(r.Input.Processed.Suffix) + len(r.Input.Processed.CodeContext),
+		"completion_id": r.Para.CompletionID,
+		"client_id":     r.Para.ClientID,
+		"prompt":        len(r.Para.Prefix) + len(r.Para.Suffix) + len(r.Para.CodeContext),
 		"canceled":      r.Canceled,
 	}
 }
